log
Wed 03 May 2023 03:25:32 PM UTC: 
 tests:  0|5
total_score: 0/70
a738b4b
Wed 03 May 2023 11:01:07 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: unused variable ‘adj_n’ [-Werror=unused-variable]
   57 |       Node* adj_n = createNode();
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9cb305c
Wed 03 May 2023 11:02:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
34ce51c
Wed 03 May 2023 11:03:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e5a74b7
Wed 03 May 2023 11:14:59 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
e5a74b7
Wed 03 May 2023 11:15:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dddcacb
Wed 03 May 2023 11:15:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2fbeec8
Wed 03 May 2023 11:17:59 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
94cbe10
Wed 03 May 2023 11:44:19 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
3ebec5a
Wed 03 May 2023 11:45:13 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
27f1e09
Wed 03 May 2023 11:46:17 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
2104aad
Wed 03 May 2023 11:57:33 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++----------
 1 file changed, 19 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:11: error: unused variable ‘b’ [-Werror=unused-variable]
   83 |       int b = 3*(k%3) + (p%3);
      |           ^
sudoku.c:82:11: error: unused variable ‘a’ [-Werror=unused-variable]
   82 |       int a = 3*(k/3) + (p/3);
      |           ^
sudoku.c:84:22: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   84 |       if(n -> sudo[i][j] != 0 && marca[n -> sudo[i][j]] == 1){
      |          ~~~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
1872a4a
Wed 03 May 2023 11:58:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:84:22: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   84 |       if(n -> sudo[i][j] != 0 && marca[n -> sudo[i][j]] == 1){
      |          ~~~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:87:22: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   87 |       marca[n -> sudo[a][b]] = 1;
      |             ~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
b88307a
Wed 03 May 2023 11:58:13 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:84:19: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   84 |       if(n -> sudo[i][j] != 0 && marca[n -> sudo[i][j]] == 1){
      |          ~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
7686903
Thu 04 May 2023 12:01:50 AM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
e2350c3
